Restructure so that all data in a single directory

--- a/0_creating-archive-formats.ipynb
+++ b/0_creating-archive-formats.ipynb
@@ -56,8 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = Path('./raw-data/CAMP_data/')\n",
-    "h5_path = Path('./data/')"
+    "data_path = Path('./data/raw-data/CAMP_data/')\n",
+    "h5_path = Path('./data/hdf5')"
    ]
   },
   {
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "test_descriptions = pd.read_excel('raw-data/Summary_of_CAMP_Cells.xlsx')\n",
+    "test_descriptions = pd.read_excel('data/raw-data/Summary_of_CAMP_Cells.xlsx')\n",
     "test_descriptions.head(2)"
    ]
   },
@@ -343,7 +343,7 @@
     }
    ],
    "source": [
-    "cell_descriptions = pd.read_excel('raw-data/Summary_of_builds.xlsx')\n",
+    "cell_descriptions = pd.read_excel('data/raw-data/Summary_of_builds.xlsx')\n",
     "cell_descriptions.head(2)"
    ]
   },
@@ -371,7 +371,7 @@
     }
    ],
    "source": [
-    "known_cells = pd.read_csv('raw-data/known-cells.csv')\n",
+    "known_cells = pd.read_csv('data/raw-data/known-cells.csv')\n",
     "print(f'Loaded {len(known_cells)} known cells')"
    ]
   },
@@ -925,7 +925,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 602/602 [02:40<00:00,  3.75it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 602/602 [02:25<00:00,  4.13it/s]"
      ]
     },
     {
@@ -1067,7 +1067,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_cell = './data/refined/batch_B1A_cell_4.h5'"
+    "example_cell = './data/hdf5/refined/batch_B1A_cell_4.h5'"
    ]
   },
   {
