--- a/2_publish-to-mdf.ipynb
+++ b/2_publish-to-mdf.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "from mdf_connect_client import MDFConnectClient\n",
     "from batdata import __version__ as bd_version\n",
+    "from shutil import rmtree\n",
     "from pathlib import Path"
    ]
   },
@@ -42,6 +43,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "245a97ee-9501-42db-bdc2-2101079bf84c",
+   "metadata": {},
+   "source": [
+    "## Clean the directories\n",
+    "Remove temporary files placed by Jupyter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7dcb218f-5eb1-441c-9c6f-53c1f8cc6c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for path in data_path.glob('*data/**/.ipynb_checkpoints'):\n",
+    "    rmtree(path)\n",
+    "    print(f'Removed: {path.relative_to(Path().cwd())}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e7f50a48-dc9f-40ef-ad38-da64716d2016",
    "metadata": {},
    "source": [
@@ -51,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "597c39f0-08c1-4efc-a421-924a9c4cc119",
    "metadata": {},
    "outputs": [],
@@ -70,18 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "46d25494-bf3f-4e56-9cc1-40974c54eac9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_refined = len(list((data_path / 'refined').glob(\"*.h5\")))\n",
-    "n_other = len(list((data_path / 'other').glob(\"*.h5\")))"
+    "n_refined = len(list((data_path / 'hdf5' / 'refined').glob(\"*.h5\")))\n",
+    "n_other = len(list((data_path / 'hdf5' / 'other').glob(\"*.h5\")))\n",
+    "assert n_refined + n_other == 601"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "f134aa7b-f6db-4732-8468-4bea0519ee80",
    "metadata": {},
    "outputs": [],
@@ -95,14 +118,17 @@
     "        'Wenquan Lu',\n",
     "        'Allison Dunlop',\n",
     "        'Steve Trask',\n",
+    "        'Bryant Polzin',\n",
     "        'Andrew Jansen',\n",
     "        'Noah H. Paulson'\n",
     "    ],\n",
     "    affiliations='Argonne National Laboratory',\n",
-    "    description='Collection of longevity tests of Nickel-Manganese-Cobalt (NMC) batteries from the '\n",
+    "    description='Collection of cycle life tests of Li-ion batteries from the '\n",
     "                'Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. '\n",
     "                f'The dataset contains all {n_refined} cells used by Paulson et al. to study the effect of feature '\n",
-    "                f'engineering on machine learning models to predict the life of batteries, and {n_other} cells that '\n",
+    "                'engineering on machine learning models to predict the life of batteries, which were selected because they '\n",
+    "                'have a graphite anode, used charging rates below 1C, and were tested for at least 100 cycles. '\n",
+    "                f'We also include {n_other} cells that '\n",
     "                'failed to meet acceptence criteria for that study. '\n",
     "                f'Each cell is stored in the HDF5 format of Argonne\\'s Battery Data Toolkit v{bd_version}, '\n",
     "                'which includes battery metadata, the raw signal from the testing equipment, and '\n",
@@ -113,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "80d32c82-9f40-4837-aa62-7533146488d2",
    "metadata": {},
    "outputs": [],
@@ -123,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "547277e2-64cd-4b92-a9cf-d7d51582acb6",
    "metadata": {},
    "outputs": [
@@ -131,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collection of longevity tests of Nickel-Manganese-Cobalt (NMC) batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 278 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, and 291 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.1.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
+      "Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used charging rates below 1C, and were tested for at least 100 cycles. We also include 301 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.1.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
      ]
     }
    ],
@@ -150,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1017ba7c-5973-4cab-826f-deafd612ac28",
    "metadata": {},
    "outputs": [],
@@ -163,13 +189,163 @@
    "id": "9dae2556-6eb5-4c9e-88c3-436c755e78d4",
    "metadata": {},
    "source": [
-    "TODO: Pull the submission trigger"
+    "# Submit the Dataset\n",
+    "Send it to the Materials Data Facility to be Processed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9ad917ee-8e4a-41bc-9fac-25c9394ecb7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.add_organization(\"MDF Open\")  # Mark that we want it to go to MDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69de9d72-cead-4813-9e88-c439b2e0bd1b",
+   "metadata": {},
+   "source": [
+    "Print out what I submitted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "03a7dfd8-9c2f-43be-94a7-6697da60910c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dc': {'titles': [{'title': 'Dataset of NMC battery Tests from CAMP, 2023 Release'}],\n",
+       "  'creators': [{'creatorName': 'Ward, Logan',\n",
+       "    'familyName': 'Ward',\n",
+       "    'givenName': 'Logan',\n",
+       "    'affiliations': ['Argonne National Laboratory']},\n",
+       "   {'creatorName': 'Kubal, Joseph',\n",
+       "    'familyName': 'Kubal',\n",
+       "    'givenName': 'Joseph',\n",
+       "    'affiliations': ['Argonne National Laboratory']},\n",
+       "   {'creatorName': 'Babinec, Susan J.',\n",
+       "    'familyName': 'Babinec',\n",
+       "    'givenName': 'Susan J.',\n",
+       "    'affiliations': ['Argonne National Laboratory']},\n",
+       "   {'creatorName': 'Lu, Wenquan',\n",
+       "    'familyName': 'Lu',\n",
+       "    'givenName': 'Wenquan',\n",
+       "    'affiliations': ['Argonne National Laboratory']},\n",
+       "   {'creatorName': 'Dunlop, Allison',\n",
+       "    'familyName': 'Dunlop',\n",
+       "    'givenName': 'Allison',\n",
+       "    'affiliations': ['Argonne National Laboratory']},\n",
+       "   {'creatorName': 'Trask, Steve',\n",
+       "    'familyName': 'Trask',\n",
+       "    'givenName': 'Steve',\n",
+       "    'affiliations': ['Argonne National Laboratory']},\n",
+       "   {'creatorName': 'Polzin, Bryant',\n",
+       "    'familyName': 'Polzin',\n",
+       "    'givenName': 'Bryant',\n",
+       "    'affiliations': ['Argonne National Laboratory']},\n",
+       "   {'creatorName': 'Jansen, Andrew',\n",
+       "    'familyName': 'Jansen',\n",
+       "    'givenName': 'Andrew',\n",
+       "    'affiliations': ['Argonne National Laboratory']},\n",
+       "   {'creatorName': 'Paulson, Noah H.',\n",
+       "    'familyName': 'Paulson',\n",
+       "    'givenName': 'Noah H.',\n",
+       "    'affiliations': ['Argonne National Laboratory']}],\n",
+       "  'publisher': 'Materials Data Facility',\n",
+       "  'publicationYear': '2023',\n",
+       "  'resourceType': {'resourceTypeGeneral': 'Dataset',\n",
+       "   'resourceType': 'Dataset'},\n",
+       "  'descriptions': [{'description': \"Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 0 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used charging rates below 1C, and were tested for at least 100 cycles. We also include 0 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.1.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\",\n",
+       "    'descriptionType': 'Other'}],\n",
+       "  'relatedIdentifiers': [{'relatedIdentifier': '10.1016/j.jpowsour.2022.231127',\n",
+       "    'relatedIdentifierType': 'DOI',\n",
+       "    'relationType': 'IsPartOf'}]},\n",
+       " 'data_sources': ['globus://0c3771de-f236-11ec-b3c1-15403b7b75ed/home/lward/Work/ASOH/publishing-camp-data/data'],\n",
+       " 'test': False,\n",
+       " 'update': False,\n",
+       " 'mdf': {'source_name': 'camp_2023', 'organizations': ['MDF Open']}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.get_submission()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0df24fc9-4cc4-4d5b-a137-afbb761e23e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'source_id': 'camp_2023_v3.5',\n",
+       " 'success': True,\n",
+       " 'error': None,\n",
+       " 'status_code': 202}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = client.submit_dataset(update=True)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "18bf01e3-5a52-4aa8-be55-17d0521f3b7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Status of submission camp_2023_v3.5 (Dataset of NMC battery Tests from CAMP, 2023 Release)\n",
+      "Submitted by Logan Ward at 2023-01-25T19:57:56.015687Z\n",
+      "\n",
+      "Submission initialization was successful: The following submissions will be cancelled: ['camp_2023_v3.4'].\n",
+      "Cancellation of previous submissions was successful.\n",
+      "Connect data download was successful: 9324 files will be grouped and extracted (from 0 archives).\n",
+      "Data transfer to primary destination was successful.\n",
+      "Metadata extraction was successful: 601 metadata records extracted out of 9324 file groups.\n",
+      "Dataset curation is in progress.\n",
+      "MDF Search ingestion has not started yet.\n",
+      "Data transfer to secondary destinations has not started yet.\n",
+      "MDF Publish publication has not started yet.\n",
+      "Citrine upload has not started yet.\n",
+      "Materials Resource Registration has not started yet.\n",
+      "Post-processing cleanup has not started yet.\n",
+      "\n",
+      "This submission is still processing.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "client.check_status(result['source_id'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0df24fc9-4cc4-4d5b-a137-afbb761e23e5",
+   "id": "2e0b72d0-72fc-4f08-9ef7-36d209545ef1",
    "metadata": {},
    "outputs": [],
    "source": []
