--- a/1_add-derived-features.ipynb
+++ b/1_add-derived-features.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdf5_path = './data/'"
+    "hdf5_path = './data/hdf5/'"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = BatteryDataset.from_batdata_hdf('./data/refined/batch_B28B_cell_2.h5')"
+    "dataset = BatteryDataset.from_batdata_hdf('./data/hdf5/refined/batch_B28B_cell_2.h5')"
    ]
   },
   {
@@ -286,7 +286,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "601it [01:11,  8.35it/s]\n"
+      "601it [01:05,  9.11it/s]\n"
      ]
     }
    ],
@@ -307,17 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "43c10023-e3ca-42f7-b34e-c740ee964909",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = BatteryDataset.from_batdata_hdf('./data/refined/batch_B28B_cell_2.h5')"
+    "dataset = BatteryDataset.from_batdata_hdf('./data/hdf5/refined/batch_B28B_cell_2.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "75535afa-cf0e-486e-8529-290c5d6b090c",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "4           -0.409343  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
