Minor updates to abstract text

--- a/2_publish-to-mdf.ipynb
+++ b/2_publish-to-mdf.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "46d25494-bf3f-4e56-9cc1-40974c54eac9",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "f134aa7b-f6db-4732-8468-4bea0519ee80",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
     "                'Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. '\n",
     "                f'The dataset contains all {n_refined} cells used by Paulson et al. to study the effect of feature '\n",
     "                'engineering on machine learning models to predict the life of batteries, which were selected because they '\n",
-    "                'have a graphite anode, used charging rates below 1C, and were tested for at least 100 cycles. '\n",
+    "                'have a graphite anode, used low charging rates, and were tested for at least 100 cycles. '\n",
     "                f'We also include {n_other} cells that '\n",
     "                'failed to meet acceptence criteria for that study. '\n",
     "                f'Each cell is stored in the HDF5 format of Argonne\\'s Battery Data Toolkit v{bd_version}, '\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "80d32c82-9f40-4837-aa62-7533146488d2",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "547277e2-64cd-4b92-a9cf-d7d51582acb6",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used charging rates below 1C, and were tested for at least 100 cycles. We also include 301 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.1.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
+      "Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 301 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.1.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
      ]
     }
    ],
@@ -261,7 +261,7 @@
        "  'publicationYear': '2023',\n",
        "  'resourceType': {'resourceTypeGeneral': 'Dataset',\n",
        "   'resourceType': 'Dataset'},\n",
-       "  'descriptions': [{'description': \"Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 0 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used charging rates below 1C, and were tested for at least 100 cycles. We also include 0 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.1.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\",\n",
+       "  'descriptions': [{'description': \"Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 301 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.1.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\",\n",
        "    'descriptionType': 'Other'}],\n",
        "  'relatedIdentifiers': [{'relatedIdentifier': '10.1016/j.jpowsour.2022.231127',\n",
        "    'relatedIdentifierType': 'DOI',\n",
